Fix margin between tags on mobile

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -316,11 +316,16 @@ nav {
     margin-bottom: 10px;
 }
 
+.project-tags {
+    margin-top: -0.5rem;
+}
+
 .project-tags li {
     display: inline-block;
     background-color: #3498DB;
     padding: 5px 7px;
     margin-right: 0.5rem;
+    margin-top: 0.5rem;
     border-radius: 5px;
     font-weight: 300;
     color: #FFF;
